--- a/api/python/slint/Cargo.toml
+++ b/api/python/slint/Cargo.toml
@@ -52,6 +52,8 @@ chrono = "0.4"
 spin_on = { workspace = true }
 css-color-parser2 = { workspace = true }
 pyo3-stub-gen = { version = "0.9.0", default-features = false }
+smol = { version = "2.0.0" }
+futures = { version = "0.3.28" }
 
 [package.metadata.maturin]
 python-source = "slint"
