--- a/api/python/slint/pyproject.toml
+++ b/api/python/slint/pyproject.toml
@@ -37,7 +37,7 @@ Changelog = "https://github.com/slint-ui/slint/blob/master/CHANGELOG.md"
 Tracker = "https://github.com/slint-ui/slint/issues"
 
 [project.optional-dependencies]
-dev = ["pytest", "numpy>=2.3.2", "pillow>=11.3.0"]
+dev = ["pytest", "numpy>=2.3.2", "pillow>=11.3.0", "aiohttp>=3.12.15"]
 
 [dependency-groups]
 dev = [
@@ -48,13 +48,14 @@ dev = [
   "ruff>=0.9.6",
   "pillow>=11.3.0",
   "numpy>=2.3.2",
+  "aiohttp>=3.12.15",
 ]
 
 [tool.uv]
 # Rebuild package when any rust files change
 cache-keys = [{ file = "pyproject.toml" }, { file = "Cargo.toml" }, { file = "**/*.rs" }]
 # Uncomment to build rust code in development mode
-# config-settings = { build-args = '--profile=dev' }
+config-settings = { build-args = '--profile=dev' }
 
 [tool.mypy]
 strict = true
